@@ -124,6 +124,16 @@ Pierpaolo Pastorino
 Kelly Gann 
 Alessio Baldan 
 Fabio Tozzi 
+Offer Shmuely
+Fernandez Olmos
+Vladimir Sorokin
+Akinyemi Oyenusi 
+Marcel Jaehne 
+Serge Redon
+Vaclav Pekny 
+Scott Campbell  
+Piero Sorchi 
+Jean-Paul Esser 
 
 
 =====================================================
@@ -135,24 +145,27 @@ Earl (Ardupilot)
 Philip Moss (Frsky)
 Mike Blandford (A lot of stuff!)
 bertrand35 (FrSky)
-Rob Thomson (port from gruvin + wiki)
+Rob Thomson (port from gruvin + wiki + 9x forums + some more stuff I forgot)
 Romolo Manfredini (eePe)
 
 =====================================================
 Translators
 =====================================================
 Pascal Dugue  (French)
+Jean-Michel Ramond (French)
 Michele America (Portuguese)
 Dmitry Zaitsev (Russian)
 Joachim Herzig (German)
 Luis Llaberia (Spanish)
 Jose A. de los Angeles (Spanish)
 Alexandre Magalhaes (Portuguese)
+Istvan Hegyi (Hungarian)
 
 =====================================================
 Special thanks to
 Jon Lowe
 Gohst
+Rick Crane (support through the whole project)
 
 And
 Steven (s_mack) (maker of the fabulous pogo board www.smartieparts.com)
